# python-dynamic-code

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.rst  TODO.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: api_reference.rst  architecture.rst  conf.py  index.rst  requirements.txt
docs/sample-projects/mini-pluggy/: mini_pluggy.py
docs/sample-projects/simple/: pdc_optimizers.py  simple_lib.py  test_compound_fast_path.py  test_simple_loop.py
src/python_dynamic_code/: __init__.py  main.py  parse.py  py.typed  runner.py  util.py
src/python_dynamic_code/conversion_code/: __init__.py  conversion.py  writer.py
src/python_dynamic_code/parse/: __init__.py  ast_util.py  directives.py  parser.py  pdc_nodes.py
tests/: benchmark.py  test_ast_utils.py  test_attachment.py  test_codegen.py  test_parse.py  test_runner.py  test_sample_projects.py  test_unit_main.py  test_utils.py
tests/conversion_2_tests/: test_ast_code.py  test_conversion_writer.py
tests/conversion_tests/: test_conversion_code.py
tests/parse_tests/: test_parse.py
tests/sample-projects/mini-pluggy/: mini_pluggy.py  test_code.py
