[build-system]
requires = [
  "setuptools>=45.0",
  "setuptools-scm[toml]>=6.2.3",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/wahuneke/python-dynamic-code"
"Bug Tracker" = "https://github.com/wahuneke/python-dynamic-code/issues"
"Documentation" = "https://python-dynamic-code.readthedocs.io/en/latest/"

[tool.setuptools_scm]
write_to = "src/python_dynamic_code/_version.py"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
