[metadata]
name = python-dynamic-code
description = library facilitating the use of dynamic code in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Bill Huneke
author_email = wahuneke@gmail.com
url = https://github.com/wahuneke/python-dynamic-code
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Self Modifying Code
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Pre-processors
    Typing :: Typed
    Programming Language :: Python :: 3 :: Only
    Private :: Do Not Upload

[options]
packages =
    python_dynamic_code
install_requires =
    more-itertools
    sentinel==1.0.0
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm
[options.extras_require]
dev =
    pre-commit
    tox
testing =
    pytest
    pytest-benchmark
    pytest-mock
    pytest-mypy
    hypothesis
    hypothesis-pytest
    hypothesmith
[options.package_data]
python_dynamic_code = py.typed

[devpi:upload]
formats=sdist.tgz,bdist_wheel

[flake8]
max-line-length = 120
ignore = E203, W503
